--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link
+      rel="apple-touch-icon"
+      href="https://www.pngkit.com/png/full/112-1128796_facebook-stickers-corey-booth-portal-rick-and-morty.png"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
